# sprng

./: AUTHORS  ChangeLog  Makefile  Makefile.am  cleanup.sh  configure.ac  make.CHOICES
DOCS/: README
DOCS/www/: PLAT.html  button.html  checkpointer-interface.html  checkpointer-reference.html  checksprng.html  compilation.html  default-interface.html  default-reference.html  definitions.html  examples.html  frames.html  frames2.html  generators.html  install.html  introduction.html  languages.html  macros.html  makefile.html  message-passing.html  newgen.html  parameters.html  physical-model-tests.html  platforms.html  quick-default.html  quick-reference.html  quick-simple.html  quick-start.html  reference.html  refs.html  simple-interface.html  simple-reference.html  sprng.html  statistical-tests.html  test-results.html  test-suite.html  tests.html  timesprng.html  toc.html  trouble-shooting.html  usage.html  (+3 more)
DOCS/www/paper/: node1.html  node10.html  node11.html  node12.html  node13.html  node14.html  node15.html  node16.html  node17.html  node18.html  node19.html  node2.html  node20.html  node3.html  node4.html  node5.html  node6.html  node7.html  node8.html  node9.html  paper.html
DOCS/www/testwiz/: TestWizard.java
EXAMPLES/: Makefile  Makefile.am  Makefile.am.copy  convert.cpp  pi-simple.cpp  seed-simple.cpp  seed.cpp  spawn.cpp  sprng.cpp
EXAMPLES/mpisprng/: 2streams_mpi.cpp  Makefile.am  Makefile.am.copy  fsprng-simple_mpi.cpp  fsprng_mpi.cpp  message-simple_mpi.cpp  message_mpi.cpp  pi-simple_mpi.cpp  seed-simple_mpi.cpp  seed_mpi.cpp  sprng_mpi.cpp  sprng_simple_mpi.cpp
SRC/: Makefile.am  bignum.cpp  bignum.h  bigrat.cpp  cputime.cpp  fwrap.cpp  fwrap.h  info.cpp  interface.h  make.GENERIC  memory.cpp  memory.h  sprng.cpp  sprng.h  sprng_cpp.cpp  sprng_cpp.h  sprng_f.h
SRC/cmrg/: Makefile.copy  cmrg.cpp  primelist.h  primes.c  primes.h
SRC/lcg/: Makefile.copy  lcg.cpp
SRC/lcg64/: Makefile.copy  lcg64.cpp
SRC/lfg/: Makefile.copy  lfg.cpp
SRC/mlfg/: Makefile.copy  mlfg.cpp
SRC/pmlcg/: Makefile  Makefile.copy  basic.h  bignum.h  info.h  longlong.h  longlong.h.good  longlong.h.nocast  pmlcg.c  pmlcg.cpp
SRC/sprng/: Makefile
TESTS/: Makefile  Makefile.am  chisquare.cpp  collisions.cpp  coupon.cpp  init_tests.cpp  metropolis.cpp  poker.cpp  random_walk.cpp  runs.cpp
TESTS/mpitests/: Makefile.am  chisquare.cpp  equidist.cpp  sum.cpp  wolff.cpp
check/: Makefile.am
check/cmrg/: Makefile.am  check_gen.cpp  check_gen_simple.cpp
check/lcg/: Makefile.am  check_gen.cpp  check_gen_simple.cpp
check/lcg64/: Makefile.am  check_gen.cpp  check_gen_simple.cpp
check/lfg/: Makefile.am  check_gen.cpp  check_gen_simple.cpp
check/mlfg/: Makefile.am  check_gen.cpp  check_gen_simple.cpp
check/pmlcg/: Makefile.am  check_gen.cpp  check_gen_simple.cpp  check_genf.F.copy  check_genf.F.old
debian/: changelog  control  copyright  libsprng2-dev.files  libsprng2.shlibs  rules
include/: Makefile.am  bignum.h  bignum.h.copy  sprng_cpp.h
